// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video label with a title 1`] = `
<View>
  <View>
    <IconVideo
      fillColour="#008347"
      height={9}
    />
  </View>
  <Text>
    SWIMMING
  </Text>
</View>
`;

exports[`2. video label without a title shows video 1`] = `
<View>
  <View>
    <IconVideo
      fillColour="#008347"
      height={9}
    />
  </View>
  <Text>
    VIDEO
  </Text>
</View>
`;

exports[`3. video label with null title shows video 1`] = `
<View>
  <View>
    <IconVideo
      fillColour="#008347"
      height={9}
    />
  </View>
  <Text>
    VIDEO
  </Text>
</View>
`;

exports[`4. video label with the black default colour 1`] = `
<View>
  <View>
    <IconVideo
      fillColour="black"
      height={9}
    />
  </View>
  <Text>
    VIDEO
  </Text>
</View>
`;
